# ds

./: .cspell.json  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  ds.toml  pyproject.toml
.github/workflows/: ci.yaml
docs/: args.html  configs.html  env.html  index.html  runner.html  searchers.html  symbols.html  tasks.html
docs/parsers/: cargo_toml.html  composer_json.html  ds_toml.html  index.html  makefile.html  package_json.html  pyproject_pdm.html  pyproject_poetry.html  pyproject_rye.html  pyproject_toml.html  toml.html  uv_toml.html
examples/: Cargo.toml  bad-key.toml  bad-value.toml  bad.toml  full.toml  loop-bad.toml  loop-good.toml  loop.toml  package.json  pyproject.toml  readme-basic.toml  readme-composite.toml  readme-error-suppression.toml  unknown.json
examples/formats/: Cargo.toml  Makefile  README.md  composer.json  ds.toml  package.json  pyproject-ds.toml  pyproject-pdm.toml  pyproject-poetry.toml  pyproject-rye.toml
examples/misc/: bad-value.toml  ds.toml  unknown-suffix.txt
examples/readme/: README.md  argument-interpolation.toml  basic.toml  composite.toml  environment-variables.toml  error-suppression.toml  example.toml  lifecycle-bad.toml  lifecycle-good.toml
examples/workspace/: Cargo.toml  README.md  ds.toml  package.json  pyproject-ds.toml  pyproject-poetry1.toml  pyproject-poetry2.toml  pyproject-rye.toml  pyproject-uv.toml
examples/workspace/members/a/: Cargo.toml
examples/workspace/members/b/: Cargo.toml  package.json
examples/workspace/members/x/: package.json
src/: cog_helpers.py  ds.py
src/ds/: __init__.py  __main__.py  args.py  configs.py  env.py  parsers.py  runner.py  searchers.py  symbols.py  tasks.py
src/ds/parsers/: __init__.py  cargo_toml.py  composer_json.py  ds_toml.py  makefile.py  package_json.py  pyproject_pdm.py  pyproject_poetry.py  pyproject_rye.py  pyproject_toml.py  toml.py  uv_toml.py
test/: ds.toml  package.json  test_args.py  test_configs.py  test_env.py  test_find.py  test_main.py  test_npm.py  test_parse.py  test_parse_ds.py  test_parse_npm.py  test_parse_tasks.py  test_parse_workspace.py  test_parsers.py  test_runner.py  test_task.py  test_tasks.py
test/parsers/: __init__.py  test_cargo_toml.py  test_composer_json.py  test_ds_toml.py  test_makefile.py  test_package_json.py  test_pyproject_pdm.py  test_pyproject_poetry.py  test_pyproject_rye.py  test_pyproject_toml.py  test_uv_toml.py
